<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FFFFFFFF">

    <TextView
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_type"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
  		android:textColor="#000000"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_caserne"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
  		android:textColor="#000000"
        android:layout_weight="1"/> 

    <TextView
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_etat"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
  		android:textColor="#000000"
        android:layout_weight="1"/> 

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_gh_arrivee"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
  		android:textColor="#000000"
        android:layout_weight="1"/>   

    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicule_gh_retour"
        android:gravity="center"
        android:textSize="24dp"
        android:textStyle="bold"
  		android:textColor="#000000"
        android:layout_weight="1"/>    
    
</LinearLayout>