<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
	    android:background="#FFFFFF">
	
	    <TextView
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_type"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/>
	
	    <TextView
	        android:layout_width="160dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_caserne"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/> 
	
	    <TextView
	        android:layout_width="160dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_etat"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/> 
	
	    <TextView
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_gh_demande"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/>  
	
	    <TextView
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_gh_arrivee"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/>   
	
	    <TextView
	        android:layout_width="70dp"
	        android:layout_height="wrap_content"
	        android:text="@string/vehicule_gh_retour"
	        android:gravity="center"
	        android:textSize="24dp"
	        android:textStyle="bold"
	  		android:textColor="#000000"
	        android:layout_weight="1"/>      
	    
	</LinearLayout>
    
    	<LinearLayout
	    android:id="@+id/menu_moyens"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"/>
    
    <ListView
        android:id="@+id/moyens_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="36dp"
        android:layout_above="@+id/btn_demande_moyens"
        android:numColumns="auto_fit"/>

    <Button
        android:id="@+id/btn_demande_moyens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/demande_moyen"/>

</RelativeLayout>